feat: changed cache logic, add redis config